--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/styles.css" />
 </head>
-
+<header>
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark px-lg-5 navbar-gray">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="src/codoacodo.png" alt="Logo" class="d-inline-block align-text-top" />
+                Conf Bs As
+            </a>
+            <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
+                <ul class="navbar-nav justify-content-around">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Los oradores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">El lugar y fecha</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled">Conviértete en orador</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-success">Comprar tickets</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
 
 <body>
-    <header>
-        <nav class="navbar navbar-dark navbar-expand-lg bg-dark px-lg-5 navbar-gray">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="src/codoacodo.png" alt="Logo" class="d-inline-block align-text-top" />
-                    Conf Bs As
-                </a>
-                <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
-                    <ul class="navbar-nav justify-content-around">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Los oradores</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#">El lugar y fecha</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Conviértete en orador</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link link-success">Comprar tickets</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+
     <div class="container-fluid img-banner">
         <div class="container-fluid text-banner">
             <h1>Conf Bs As</h1>
@@ -90,6 +90,10 @@
                 </div>
             </div>
 
+        </div>
+
+        <div>
+            
         </div>
         
 
