--- a/index.html
+++ b/index.html
@@ -73,9 +73,12 @@
                         <span class="badge text-bg-warning">Javascript</span>
                         <span class="badge text-bg-info">React</span>
                         <h5 class="card-title">Steve Jobs</h5>
-                        <p class="card-text">Steven Paul Jobs (San Francisco, 24 de febrero de 1955-Palo Alto, 5 de octubre
-                            de 2011) fue un empresario, diseñador industrial, magnate empresarial, propietario de medios e
-                            inversor estadounidense. Fue cofundador y presidente ejecutivo de Apple12 y máximo accionista
+                        <p class="card-text">Steven Paul Jobs (San Francisco, 24 de febrero de 1955-Palo Alto, 5 de
+                            octubre
+                            de 2011) fue un empresario, diseñador industrial, magnate empresarial, propietario de medios
+                            e
+                            inversor estadounidense. Fue cofundador y presidente ejecutivo de Apple12 y máximo
+                            accionista
                             individual de The Walt Disney Company.</p>
                     </div>
                 </div>
@@ -91,12 +94,13 @@
                         <span class="badge text-bg-info">React</span>
                         <h5 class="card-title">Bill Gates</h5>
                         <p class="card-text">William Henry Gates III (Seattle, Washington; 28 de octubre de 1955) es un
-                            magnate empresarial, desarrollador de software, inversor, autor y filántropo estadounidense. Es
+                            magnate empresarial, desarrollador de software, inversor, autor y filántropo estadounidense.
+                            Es
                             cofundador de Microsoft, junto con difunto amigo de la infancia Paul Allen. </p>
                     </div>
                 </div>
             </div>
-            
+
 
 
             <div class="col-sm-4">
@@ -106,10 +110,14 @@
                         <span class="badge text-bg-secondary">Negocios</span>
                         <span class="badge text-bg-danger">Startups</span>
                         <h5 class="card-title">Ada Lovelace</h5>
-                        <p class="card-text">Augusta Ada King, condesa de Lovelace (Londres, 10 de diciembre de 1815-íd., 27
-                            de noviembre de 1852), registrada al nacer como Augusta Ada Byron y conocida habitualmente como
-                            Ada Lovelace, fue una matemática y escritora británica, célebre sobre todo por su trabajo acerca
-                            de la computadora mecánica de uso general de Charles Babbage, la denominada máquina analítica.
+                        <p class="card-text">Augusta Ada King, condesa de Lovelace (Londres, 10 de diciembre de
+                            1815-íd., 27
+                            de noviembre de 1852), registrada al nacer como Augusta Ada Byron y conocida habitualmente
+                            como
+                            Ada Lovelace, fue una matemática y escritora británica, célebre sobre todo por su trabajo
+                            acerca
+                            de la computadora mecánica de uso general de Charles Babbage, la denominada máquina
+                            analítica.
                         </p>
                     </div>
                 </div>
@@ -119,27 +127,51 @@
 
     </div>
 
-        <div class="honolulu-banner">
-                <div class="honolulu-img">
-                    <picture>
-                        <img src="src/honolulu.jpg" alt="honolulu">
-                    </picture>
-                </div>
-                <div class="honolulu-info">
-                    <h4>Bs As - Octubre</h4>
-                    <p>
-                        Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados
-                        Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el
-                        nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y
-                        el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad
-                        (aproximadamente 600km2 de superficie).
-                    </p>
-                    <button class="btn btn-outline-light">Conocer más</button>
-                </div>
+    <div class="honolulu-banner">
+        <div class="honolulu-img">
+            <picture>
+                <img src="src/honolulu.jpg" alt="honolulu">
+            </picture>
         </div>
+        <div class="honolulu-info">
+            <h4>Bs As - Octubre</h4>
+            <p>
+                Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados
+                Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el
+                nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y
+                el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad
+                (aproximadamente 600km2 de superficie).
+            </p>
+            <button class="btn btn-outline-light">Conocer más</button>
+        </div>
+    </div>
+
+    <div class="form-oradores text-center">
+        <h4>Conviértete en un</h4>
+        <h5>Orador</h5>
+        <p>Anotate como orador para dar una <span>charla ignite</span>. Cuéntanos de qué quieres hablar!</p>
+        <form class="row g-3">
+            <div class="col-md-6">
+                <label for="ejemploNombre" class="form-label"></label>
+                <input type="text" class="form-control form-nombre" id="ejemploNombre" placeholder="Nombre">
+            </div>
+            <div class="col-md-6">
+                <label for="ejemploApellido" class="form-label"></label>
+                <input type="text" class="form-control form-apellido" id="ejemploApellido" placeholder="Apellido">
+            </div>
+            <textarea class="form-control" placeholder="De que te gustaria hablar?" id="floatingTextarea2"
+                style="height: 100px"></textarea>
+            <div id="floatingTextarea2" class="form-text d-inline-flex">
+                Recuerda incluir un titulo para tu charla.
+            </div>
+            <button type="submit" class="btn btn-light btn-submit">Enviar</button>
+        </form>
+    </div>
 
 
-    <footer></footer>
+    <footer>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
