--- a/index.html
+++ b/index.html
@@ -127,13 +127,34 @@
 
     </div>
 
-    <div class="honolulu-banner">
-        <div class="honolulu-img">
-            <picture>
-                <img src="src/honolulu.jpg" alt="honolulu">
-            </picture>
-        </div>
-        <div class="honolulu-info">
+    <div class="row gx-3 justify-content-center honolulu-banner">
+        <div id="carouselExampleIndicators" class="col-md-6 carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="src/honolulu.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="src/hawaii2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="src/hawaii3.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        <div class="col-md-6 honolulu-info">
             <h4>Bs As - Octubre</h4>
             <p>
                 Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados
@@ -164,12 +185,24 @@
             <div id="floatingTextarea2" class="form-text d-inline-flex">
                 Recuerda incluir un titulo para tu charla.
             </div>
-            <button type="submit" class="btn btn-light btn-submit">Enviar</button>
+            <button type="submit" class="btn btn-submit btn-success">Enviar</button>
         </form>
     </div>
 
 
-    <footer>
+    <footer class="mt-3">
+
+        <div class="footer-links">
+
+            <a href="">Preguntas frecuentes</a>
+            <a href="">Contáctanos</a>
+            <a href="">Prensa</a>
+            <a href="">Conferencias</a>
+            <a href="">Términos y condiciones</a>
+            <a href="">Privacidad</a>
+            <a href="">Estudiantes</a>
+
+        </div>
 
     </footer>
 
