--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="row container-cards">
 
-            <div class="col-sm-4">
+            <div class="col-4">
                 <div class="card">
                     <img src="src/steve.jpg" class="card-img-top" alt="Steve Jobs">
                     <div class="card-body">
@@ -86,7 +86,7 @@
 
 
 
-            <div class="col-sm-4">
+            <div class="col-4">
                 <div class="card">
                     <img src="src/bill.jpg" class="card-img-top" alt="Bill gates">
                     <div class="card-body">
@@ -103,7 +103,7 @@
 
 
 
-            <div class="col-sm-4">
+            <div class="col-4">
                 <div class="card">
                     <img src="src/ada.jpeg" class="card-img-top" alt="Ada Lovelace">
                     <div class="card-body">
@@ -192,7 +192,7 @@
 
     <footer class="mt-3">
 
-        <div class="footer-links">
+        <div class="container-fluid footer-links">
 
             <a href="">Preguntas frecuentes</a>
             <a href="">Contáctanos</a>
